[gd_scene load_steps=3 format=3 uid="uid://c20h7u20guwkd"]

[ext_resource type="Script" path="res://Scripts/Menus_Scripts/skills_menu.gd" id="1_jxqlk"]
[ext_resource type="Texture2D" uid="uid://n4a8htoqdqyf" path="res://Assets/Skills_art/Unknown_Button.png" id="1_pyhlf"]

[node name="Skills_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jxqlk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -25.0
offset_top = -17.0
offset_right = 1164.0
offset_bottom = 667.0
color = Color(0.492416, 0.658999, 0.893626, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 458.0
offset_top = -1.0
offset_right = 764.0
offset_bottom = 136.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 75
text = "Skills"

[node name="Go_Back_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1067.0
offset_top = 7.0
offset_right = 1139.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 40
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 117.0
offset_right = 1155.0
offset_bottom = 199.0
scroll_horizontal = 32

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Button_1" type="Button" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Off-Combat"

[node name="Button_2" type="Button" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Combat"

[node name="Button_3" type="Button" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Recovery"

[node name="Button_4" type="Button" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Physical"

[node name="Button_5" type="Button" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Magic"

[node name="Button_6" type="Button" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Elemental"

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 235.0
offset_right = 2879.0
offset_bottom = 1257.0
scale = Vector2(0.4, 0.4)

[node name="GridContainer" type="GridContainer" parent="ScrollContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 10

[node name="Skill_Button_1" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_2" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_3" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_4" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_5" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_6" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_7" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_8" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_9" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_10" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_11" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_12" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_13" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_14" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_15" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_16" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_17" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_18" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_19" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_20" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_21" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_22" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_23" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_24" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_25" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_26" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_27" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_28" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_29" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[node name="Skill_Button_30" type="TextureButton" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_pyhlf")
texture_pressed = ExtResource("1_pyhlf")
texture_hover = ExtResource("1_pyhlf")

[connection signal="button_up" from="Go_Back_Button" to="." method="_on_go_back_button_button_up"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Button_1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Button_2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Button_3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Button_4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Button_5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Button_6" to="." method="_on_button_6_pressed"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_1" to="." method="_on_skill_button_1_button_up"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_2" to="." method="_on_skill_button_2_button_up"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_3" to="." method="_on_skill_button_3_button_up"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_4" to="." method="_on_skill_button_4_button_up"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_5" to="." method="_on_skill_button_5_button_up"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_6" to="." method="_on_skill_button_6_button_up"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_7" to="." method="_on_skill_button_7_button_up"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_8" to="." method="_on_skill_button_8_button_up"]
[connection signal="button_up" from="ScrollContainer2/GridContainer/Skill_Button_9" to="." method="_on_skill_button_9_button_up"]
